--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.TgPhotoPicker" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.TgPhotoPicker" parent="android:Theme.Material.Light.NoActionBar" >
+    <item name="android:windowFullscreen">false</item>
+    </style>
+    <style name="Theme.MyApp.FullScreen" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+    </style>
 </resources>
